[package]
name = "rog_simulators"
license = "MPL-2.0"
version.workspace = true
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
documentation = "https://docs.rs/rog-anime"
edition = "2021"
exclude = ["data"]

[[bin]]
name = "anime_sim"
path = "src/simulator.rs"


[dependencies]
log.workspace = true

glam.workspace = true

uhid-virt = "^0.0.6"

rog_anime = { path = "../rog-anime", features = ["dbus"] }

[dependencies.sdl2]
version = "0.35"
default-features = false
# features = ["gfx"]