[package]
name = "rog_simulators"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[[bin]]
name = "anime_sim"
path = "src/simulator.rs"


[dependencies]
log.workspace = true

glam.workspace = true

uhid-virt = "^0.0.7"

rog_anime = { path = "../rog-anime", features = ["dbus"] }

[dependencies.sdl2]
version = "0.36"
default-features = false
# features = ["gfx"]
