[package]
name = "slashctl"
license = "MPL-2.0"
version.workspace = true
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
description = "A ctrl app to control the Asus Slash"
edition = "2021"

[dependencies]
rog_slash = { path = "../rog-slash" }
rog_platform = { path = "../rog-platform" }
rog_profiles = { path = "../rog-profiles" }
dmi_id = { path = "../dmi-id" }
futures-lite = "*"
udev.workspace = true
inotify.workspace = true