[package]
name = "supergfxctl"
version = "1.1.0"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asusctl"
homepage = "https://gitlab.com/asus-linux/asusctl"
documentation = "https://docs.rs/rog-anime"
description = "Types useful for fancy keyboards on ASUS ROG laptops"
keywords = ["graphics", "nvidia", "switching"]
edition = "2018"
exclude = ["data"]

[features]
daemon = ["env_logger"]
cli = ["gumdrop"]
default = ["daemon", "cli"]

[lib]
name = "supergfxctl"
path = "src/lib.rs"

[[bin]]
name = "supergfxd"
path = "src/daemon.rs"
required-features = ["daemon"]

[[bin]]
name = "supergfxctl"
path = "src/cli.rs"
required-features = ["cli"]
default-features = ["cli"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
log = "^0.4"

zbus = "^1.9.1"
zvariant = "^2.8"
zvariant_derive = "^2.8"
logind-zbus = "^0.7.1"

sysfs-class = "^0.1.2"

env_logger = { version = "^0.8", optional = true }
gumdrop = { version = "^0.8", optional = true }